syntax = "proto3";

package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTaskById (GetTaskByIdRequest) returns (GetTaskByIdResponse);
}

message CreateTaskRequest {
  string payload = 1;
  int32 priority = 2;
}

message CreateTaskResponse {
  string id = 1;
}

message GetTaskByIdRequest {
  string id = 1;
}

message GetTaskByIdResponse {
  string id = 1;
  string createdAt = 2;
  string updatedAt = 3;
  // TaskStatusEnum status = 4;
  string status = 4;
  string result = 5;
  int32 priority = 6;
  string payload = 7;
}

enum TaskStatusEnum {
  PENDING = 0;
  PROCESSING = 1;
  DONE = 2;
  FAILED = 3;
}